[package]
name = "mlg"
version = "0.1.5"
edition = "2024"

[dependencies]
hound="3.5.1"
rand="0.9.2"
[[bin]]
name = "mlg"
path = "src/main.rs"
[package.metadata.deb]
name="mlg"
maintainer = "Anthrasil <anthrasil@gmail.com>"
extended-description = "A MeLodie Generation application"
depends = "libc6 (>= 2.31)"
copyright = "Copyright (C) 2025 Anthrasil"
license-file = "LICENSE"